      (Closes: #673106)

  * debian/control:
    + [NT] Add versioned Build-Depends on dpkg-dev (>= 1.16.1~)
      as the test suite relies on it.  Thanks to Luca Falavigna
      for reporting it.

  * t:
    + [NT] Generate empty ".so" files used in the test.  This
      resolves an issue where dpkg-source would exclude them
      causing a FTBFS.  (Closes: #673198)

 -- Niels Thykier <niels@thykier.net>  Wed, 16 May 2012 13:57:40 +0200

lintian (2.5.7) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - apache2-configuration-files-need-conf-suffix
      - apache2-deprecated-auth-config
      - apache2-module-depends-on-real-apache2-package
      - apache2-module-does-not-depend-on-apache2-api
      - apache2-module-does-not-ship-load-file
      - apache2-reverse-dependency-calls-invoke-rc.d
      - apache2-reverse-dependency-calls-wrapper-script
      - apache2-reverse-dependency-ships-file-in-not-allowed-directory
      - apache2-reverse-dependency-uses-obsolete-directory
      - apache2-unparseable-dependency
      - apache2-unsupported-dependency
      - diff-contains-quilt-control-dir
      - hardening-no-fortify-functions
      - hardening-no-relro
      - hardening-no-stackprotector
      - non-standard-apache2-configuration-name
      - non-standard-apache2-module-package-name
      - rc-version-greater-than-expected-version
      - udeb-uses-unsupported-compression-for-data-tarball
      - web-application-depends-on-apache2-data-package
      - web-application-should-not-depend-unconditionally-on-apache2
    + Removed:
      - ancient-dpkg-long-filenames-check
      - ancient-dpkg-predepends-check
      - bad-ubuntu-distribution-in-changes-file
      - binary-nmu-uses-old-version-style
      - debian-control-with-duplicate-fields
      - doc-base-file-references-usr-doc
      - duplicate-fields-in-templates
      - manpage-for-non-x11-binary-in-wrong-directory
      - manpage-for-x11-binary-in-wrong-directory