@@ -15,6 +15,9 @@ lintian (2.5.8) UNRELEASED; urgency=low
     + [NT] Generate empty ".so" files used in the test.  This
       resolves an issue where dpkg-source would exclude them
       causing a FTBFS.  (Closes: #673198)
+    + [NT] Fix test failure in derivatives where some hardening
+      flags are enabled by default.  Thanks to Marc Deslauriers
+      for the report and the patch.  (Closes: #673449)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 16 May 2012 13:57:40 +0200
 
